Changed over the instructions to / bonus, fixed the layout issue, reverted the db table

--- a/static/cardtask.css
+++ b/static/cardtask.css
@@ -68,7 +68,7 @@ strong {
 
 
 .instruct table .cell {
-    width: 140px;
+    width: 240px;
 }
 
 .instruct table img {
